updating localized files
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@5594 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/Credits.cs.resx
+++ b/ifolder/src/FormsTrayApp/Credits.cs.resx
@@ -287,7 +287,7 @@
 	</data>
   
 	<data name="listBox1.Items31">
-		<value>Vyřazení přispěvatelé</value>
+		<value>Přispěvatelé, kteří již nejsou aktivní</value>
 	</data>
   
 	<data name="listBox1.Items32">
