--- a/ifolder/src/LinuxClient/po/es.po
+++ b/ifolder/src/LinuxClient/po/es.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ifolder-build 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2005-11-07 09:18-0700\n"
-"PO-Revision-Date: 2005-11-07 09:18-0700\n"
+"POT-Creation-Date: 2005-11-09 10:32-0700\n"
+"PO-Revision-Date: 2005-11-09 10:32-0700\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "MIME-Version: 1.0\n"
@@ -20,14 +20,14 @@ msgid ""
 "The iFolder is full.\n"
 "\n"
 "Click <a href=\"ShowSyncLog\">here</a> to view the Synchronization Log."
-msgstr "The iFolder is full.\n\nClick <a href=\"ShowSyncLog\">here</a> to view the Synchronization Log."
+msgstr "La iFolder está llena.\n\nHaga clic <a href=\"ShowSyncLog\">aquí</a> para ver el registro de sincronizaciones."
 #: src/LinuxClient/application/iFolderApplication.cs:396 
 msgid ""
 "You have Read-only access to this iFolder.  Files that you place in this "
 "iFolder will not be synchronized.\n"
 "\n"
 "Click <a href=\"ShowSyncLog\">here</a> to view the Synchronization Log."
-msgstr "You have Read-only access to this iFolder.  Files that you place in this iFolder will not be synchronized.\n\nClick <a href=\"ShowSyncLog\">here</a> to view the Synchronization Log."
+msgstr "Tiene acceso de sólo lectura a la iFolder.  Los archivos que coloque en esta iFolder no se sincronizarán.\n\nHaga clic <a href=\"ShowSyncLog\">aquí/a> para ver el registro de sincronizaciones."
 #: src/LinuxClient/application/iFolderApplication.cs:466 
 #, csharp-format
 msgid "Incomplete Synchronization: {0}"
@@ -42,7 +42,7 @@ msgid ""
 "{0} has invited you to participate in this shared iFolder.\n"
 "\n"
 "Click <a href=\"SetUpiFolder:{1}\">here</a> to set up this iFolder."
-msgstr "{0} has invited you to participate in this shared iFolder.\n\nClick <a href=\"SetUpiFolder:{1}\">here</a> to set up this iFolder."
+msgstr "{0} le ha invitado a participar en la iFolder compartida.\n\nHaga clic <a href=\"SetUpiFolder:{1}\">aquí</a> para configurarla."
 #: src/LinuxClient/application/iFolderApplication.cs:591 
 #, csharp-format
 msgid ""
@@ -51,7 +51,7 @@ msgid ""
 "Click <a href=\"ResolveiFolderConflicts:{0}\">here</a> to resolve the "
 "conflicts.\n"
 "What is a <a href=\"ShowConflictHelp\">conflict</a>?"
-msgstr "A conflict has been detected in this iFolder.\n\nClick <a href=\"ResolveiFolderConflicts:{0}\">here</a> to resolve the conflicts.\nWhat is a <a href=\"ShowConflictHelp\">conflict</a>?"
+msgstr "Se ha detectado un conflicto en la iFolder.\n\nHaga clic <a href=\"ResolveiFolderConflicts:{0}\">aquí</a> para resolverlo.\n¿Qué es un <a href=\"ShowConflictHelp\">conflicto</a>?"
 #: src/LinuxClient/application/iFolderApplication.cs:650 
 msgid "New iFolder User"
 msgstr "Nuevo usuario de la carpeta de iFolder"
@@ -61,13 +61,13 @@ msgid "{0} has joined the iFolder \"{1}\""
 msgstr "{0} se ha unido a la iFolder \"{1}\""
 #: src/LinuxClient/application/iFolderApplication.cs:757 
 msgid "Welcome to iFolder"
-msgstr "Welcome to iFolder"
+msgstr "Bienvenido a iFolder"
 #: src/LinuxClient/application/iFolderApplication.cs:826 
 msgid "iFolder is starting"
-msgstr "iFolder is starting"
+msgstr "iFolder se está iniciando"
 #: src/LinuxClient/application/iFolderApplication.cs:839 
 msgid "iFolder is shutting down"
-msgstr "iFolder is shutting down"
+msgstr "iFolder se está apagando"
 #: src/LinuxClient/application/iFolderApplication.cs:879 
 #: src/LinuxClient/library/iFolderWindow.cs:290
 msgid "iFolders"
@@ -402,7 +402,7 @@ msgid "minute(s)"
 msgstr "minuto(s)"
 #: src/LinuxClient/library/iFolderPropSettingsPage.cs:158 
 msgid "Set _Quota:"
-msgstr "Definir cuota:"
+msgstr "Definir _cuota:"
 #: src/LinuxClient/library/iFolderPropSettingsPage.cs:337 
 msgid "Owner:"
 msgstr "Propietario:"
@@ -574,13 +574,13 @@ msgid "Share _with..."
 msgstr "Compartir con..."
 #: src/LinuxClient/library/iFolderWindow.cs:550 
 msgid "Resolve conflic_ts"
-msgstr "Resolve conflic_ts"
+msgstr "Resolver conflic_tos"
 #: src/LinuxClient/library/iFolderWindow.cs:555 
 msgid "S_ynchronize now"
-msgstr "S_ynchronize now"
+msgstr "S_incronizar ahora"
 #: src/LinuxClient/library/iFolderWindow.cs:560 
 msgid "_Revert to a Normal Folder"
-msgstr "Revertir a una carpeta normal"
+msgstr "_Revertir a una carpeta normal"
 #: src/LinuxClient/library/iFolderWindow.cs:578 
 msgid "i_Folder"
 msgstr "i_Folder"
@@ -798,7 +798,7 @@ msgid ""
 msgstr "La carpeta que se ha especificado no existe. Seleccione una carpeta existente e inténtelo de nuevo."
 #: src/LinuxClient/library/iFolderWindow.cs:2362 
 msgid "A folder with the same name already exists."
-msgstr "A folder with the same name already exists."
+msgstr "Ya existe una carpeta con el mismo nombre."
 #: src/LinuxClient/library/iFolderWindow.cs:2363 
 msgid ""
 "The location you selected already contains a folder with the same name as "
@@ -806,109 +806,109 @@ msgid ""
 msgstr "La ubicación seleccionada ya contiene una carpeta con el mismo nombre que esta iFolder. Seleccione una ubicación diferente e inténtelo de nuevo."
 #: src/LinuxClient/library/iFolderWindow.cs:2367 
 msgid "iFolders cannot exist at the drive level."
-msgstr "iFolders cannot exist at the drive level."
+msgstr "No es posible que haya carpetas iFolder en el nivel de la unidad."
 #: src/LinuxClient/library/iFolderWindow.cs:2368 
 msgid ""
 "The location you selected is at the root of the drive.  Please select a "
 "location that is not at the root of a drive and try again."
-msgstr "The location you selected is at the root of the drive.  Please select a location that is not at the root of a drive and try again."
+msgstr "La ubicación seleccionada está en la raíz de la unidad. Seleccione una ubicación que no se encuentre en la raíz de la unidad e inténtelo de nuevo."
 #: src/LinuxClient/library/iFolderWindow.cs:2372 
 msgid "The selected location contains invalid characters."
-msgstr "The selected location contains invalid characters."
+msgstr "La ubicación seleccionada contiene caracteres no válidos."
 #: src/LinuxClient/library/iFolderWindow.cs:2373 
 msgid ""
 "The characters \\:*?\"<>| cannot be used in an iFolder. Please select a "
 "different location and try again."
-msgstr "The characters \\:*?\"<>| cannot be used in an iFolder. Please select a different location and try again."
+msgstr "Los caracteres \\:*?\"<>| no pueden utilizarse en una carpeta iFolder. Seleccione una ubicación diferente e inténtelo de nuevo."
 #: src/LinuxClient/library/iFolderWindow.cs:2377 
 msgid "The selected location is inside the iFolder data folder."
-msgstr "The selected location is inside the iFolder data folder."
+msgstr "La ubicación seleccionada se encuentra en la carpeta de datos iFolder."
 #: src/LinuxClient/library/iFolderWindow.cs:2378 
 msgid ""
 "The iFolder data folder is normally located in your home folder in the "
 "folder \".local/share\".  Please select a different location and try again."
-msgstr "The iFolder data folder is normally located in your home folder in the folder \".local/share\".  Please select a different location and try again."
+msgstr "La carpeta de datos iFolder se encuentra normalmente en su carpeta personal en la carpeta \".local/share\". Seleccione una ubicación diferente e inténtelo de nuevo."
 #: src/LinuxClient/library/iFolderWindow.cs:2382 
 msgid "The selected location contains the iFolder data files."
-msgstr "The selected location contains the iFolder data files."
+msgstr "La ubicación seleccionada contiene los archivos de datos iFolder."
 #: src/LinuxClient/library/iFolderWindow.cs:2383 
 msgid ""
 "The location you have selected contains the iFolder data files.  These are "
 "normally located in your home folder in the folder \".local/share\".  Please "
 "select a different location and try again."
-msgstr "The location you have selected contains the iFolder data files.  These are normally located in your home folder in the folder \".local/share\".  Please select a different location and try again."
+msgstr "La ubicación seleccionada contiene los archivos de datos iFolder. Estos archivos se encuentran normalmente en la carpeta personal en la carpeta \".local/share\". Seleccione una ubicación diferente e inténtelo de nuevo."
 #: src/LinuxClient/library/iFolderWindow.cs:2387 
 msgid "The selected location is on a network or non-physical drive."
-msgstr "The selected location is on a network or non-physical drive."
+msgstr "La ubicación seleccionada está en una red o en una unidad no física."
 #: src/LinuxClient/library/iFolderWindow.cs:2388 
 msgid ""
 "iFolders must reside on a physical drive.  Please select a different "
 "location and try again."
-msgstr "iFolders must reside on a physical drive.  Please select a different location and try again."
+msgstr "Las carpetas iFolder deben residir en una unidad física. Seleccione una ubicación diferente e inténtelo de nuevo."
 #: src/LinuxClient/library/iFolderWindow.cs:2392 
 msgid "The selected location contains a system folder."
-msgstr "The selected location contains a system folder."
+msgstr "La ubicación seleccionada contiene una carpeta del sistema."
 #: src/LinuxClient/library/iFolderWindow.cs:2393 
 msgid ""
 "System folders cannot be contained in an iFolder.  Please select a different "
 "location and try again."
-msgstr "System folders cannot be contained in an iFolder.  Please select a different location and try again."
+msgstr "Una carpeta iFolder no puede contener carpetas del sistema. Seleccione una ubicación diferente e inténtelo de nuevo."
 #: src/LinuxClient/library/iFolderWindow.cs:2397 
 msgid "The selected location is a system drive."
-msgstr "The selected location is a system drive."
+msgstr "La ubicación seleccionada es una unidad del sistema."
 #: src/LinuxClient/library/iFolderWindow.cs:2398 
 msgid ""
 "System drives cannot be contained in an iFolder.  Please select a different "
 "location and try again."
-msgstr "System drives cannot be contained in an iFolder.  Please select a different location and try again."
+msgstr "Una carpeta iFolder no puede contener unidades del sistema. Seleccione una ubicación diferente e inténtelo de nuevo."
 #: src/LinuxClient/library/iFolderWindow.cs:2402 
 msgid "The selected location includes the Windows folder."
-msgstr "The selected location includes the Windows folder."
+msgstr "La ubicación seleccionada incluye la carpeta de Windows."
 #: src/LinuxClient/library/iFolderWindow.cs:2403 
 msgid ""
 "The Windows folder cannot be contained in an iFolder.  Please select a "
 "different location and try again."
-msgstr "The Windows folder cannot be contained in an iFolder.  Please select a different location and try again."
+msgstr "Una carpeta iFolder no puede contener la carpeta de Windows. Seleccione una ubicación diferente e inténtelo de nuevo."
 #: src/LinuxClient/library/iFolderWindow.cs:2407 
 msgid "The selected location includes the Program Files folder."
-msgstr "The selected location includes the Program Files folder."
+msgstr "La ubicación seleccionada incluye la carpeta Archivos de programa."
 #: src/LinuxClient/library/iFolderWindow.cs:2408 
 msgid ""
 "The Program Files folder cannot be contained in an iFolder.  Please select a "
 "different location and try again."
-msgstr "The Program Files folder cannot be contained in an iFolder.  Please select a different location and try again."
+msgstr "Una carpeta iFolder no puede contener la carpeta Archivos de programa. Seleccione una ubicación diferente e inténtelo de nuevo."
 #: src/LinuxClient/library/iFolderWindow.cs:2412 
 msgid "The selected location does not exist."
-msgstr "The selected location does not exist."
+msgstr "La ubicación seleccionada no existe."
 #: src/LinuxClient/library/iFolderWindow.cs:2413 
 msgid ""
 "iFolders can only be created from folders that exist.  Please select a "
 "different location and try again."
-msgstr "iFolders can only be created from folders that exist.  Please select a different location and try again."
+msgstr "Las carpetas iFolder sólo se pueden crear a partir de carpetas ya existentes. Seleccione una ubicación diferente e inténtelo de nuevo."
 #: src/LinuxClient/library/iFolderWindow.cs:2417 
 msgid "You do not have access to read files in the selected location."
-msgstr "You do not have access to read files in the selected location."
+msgstr "No dispone de acceso para leer archivos en la ubicación seleccionada."
 #: src/LinuxClient/library/iFolderWindow.cs:2418 
 #: src/LinuxClient/library/iFolderWindow.cs:2423
 msgid ""
 "iFolders can only be created from folders where you have access to read and "
 "write files.  Please select a different location and try again."
-msgstr "iFolders can only be created from folders where you have access to read and write files.  Please select a different location and try again."
+msgstr "Las carpetas iFolder sólo se pueden crear a partir de carpetas en las que tenga acceso para leer y escribir archivos. Seleccione una ubicación diferente e inténtelo de nuevo."
 #: src/LinuxClient/library/iFolderWindow.cs:2422 
 msgid "You do not have access to write files in the selected location."
-msgstr "You do not have access to write files in the selected location."
+msgstr "No dispone de acceso para escribir archivos en la ubicación seleccionada."
 #: src/LinuxClient/library/iFolderWindow.cs:2427 
 msgid "The selected location already contains an iFolder."
-msgstr "The selected location already contains an iFolder."
+msgstr "La ubicación seleccionada ya contiene una carpeta iFolder."
 #: src/LinuxClient/library/iFolderWindow.cs:2428 
 #: src/LinuxClient/library/iFolderWindow.cs:2433
 msgid ""
 "iFolders cannot exist inside other iFolders.  Please select a different "
 "location and try again."
-msgstr "iFolders cannot exist inside other iFolders.  Please select a different location and try again."
+msgstr "Una carpeta iFolder no puede contener otras carpetas iFolder. Seleccione una ubicación diferente e inténtelo de nuevo."
 #: src/LinuxClient/library/iFolderWindow.cs:2432 
 msgid "The selected location is inside another iFolder."
-msgstr "The selected location is inside another iFolder."
+msgstr "La ubicación seleccionada está dentro de otra iFolder."
 #: src/LinuxClient/library/LogWindow.cs:60 
 msgid "iFolder Synchronization Log"
 msgstr "Registro de sincronizaciones iFolder"
@@ -983,7 +983,7 @@ msgstr "La falta de espacio en disco en este equipo no ha permitido la sincroniz
 #: src/LinuxClient/library/LogWindow.cs:432 
 #, csharp-format
 msgid "Read-only iFolder prevented synchronization: {0}"
-msgstr "Read-only iFolder prevented synchronization: {0}"
+msgstr "La iFolder de sólo lectura no ha permitido la sincronización: {0}"
 #: src/LinuxClient/library/LogWindow.cs:437 
 #, csharp-format
 msgid "iFolder failed synchronization: {0}"
@@ -1025,7 +1025,7 @@ msgid "iFolder Preferences"
 msgstr "Preferencias de iFolder"
 #: src/LinuxClient/library/PreferencesWindow.cs:111 
 msgid "Accou_nts"
-msgstr "Accou_nts"
+msgstr "Cuen_tas"
 #: src/LinuxClient/library/PrefsAccountsPage.cs:176 
 msgid "System Name"
 msgstr "Nombre del sistema"
@@ -1043,7 +1043,7 @@ msgid "User Name:"
 msgstr "Usuario"
 #: src/LinuxClient/library/PrefsAccountsPage.cs:295 
 msgid "Remember _password"
-msgstr "Recordar contraseña"
+msgstr "Recordar _contraseña"
 #: src/LinuxClient/library/PrefsAccountsPage.cs:303 
 msgid "_Enable account"
 msgstr "Habilitar la cuenta"
@@ -1067,7 +1067,7 @@ msgstr "¿Desea ignorar los ajustes actuales?"
 msgid ""
 "You are currently creating a new account.  By selecting a different account "
 "you cancel the operation."
-msgstr "You are currently creating a new account.  By selecting a different account you cancel the operation."
+msgstr "En estos momentos está creando una nueva cuenta. Para cancelar la operación, seleccione una cuenta diferente."
 #: src/LinuxClient/library/PrefsAccountsPage.cs:674 
 msgid "Unable to log out of the iFolder Server"
 msgstr "No es posible salir del servidor iFolder"
@@ -1125,7 +1125,7 @@ msgstr "Dispone de {0} entradas de gracia."
 msgid ""
 "You are currently creating a new account.  By closing the window or changing "
 "to a different page you cancel the operation."
-msgstr "You are currently creating a new account.  By closing the window or changing to a different page you cancel the operation."
+msgstr "En estos momentos está creando una nueva cuenta. Para cancelar la operación, cierre la ventana o cambie a una página diferente."
 #: src/LinuxClient/library/PrefsGeneralPage.cs:102 
 msgid "Application"
 msgstr "Aplicación"
@@ -1142,7 +1142,7 @@ msgid "Notification"
 msgstr "Notificación"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:163 
 msgid "Notify of share_d iFolders"
-msgstr "Notify of share_d iFolders"
+msgstr "Notificar carpetas iFolder compartida_s"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:170 
 msgid "Notify of conflic_ts"
 msgstr "Notificación de conflictos"
@@ -1151,7 +1151,7 @@ msgid "Notify when a _user joins"
 msgstr "Notificar cuando se una un usuario"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:219 
 msgid "Automatically S_ynchronize iFolders"
-msgstr "Automatically S_ynchronize iFolders"
+msgstr "S_incronizar automáticamente carpetas iFolder"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:229 
 msgid "Synchronize iFolders Every"
 msgstr "Sincronizar carpetas iFolder cada"
@@ -1169,12 +1169,12 @@ msgid "days"
 msgstr "días"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:501 
 msgid "Synchronization Interval Limit"
-msgstr "Synchronization Interval Limit"
+msgstr "Límite de intervalo de sincronización"
 #: src/LinuxClient/library/PrefsGeneralPage.cs:502 
 msgid ""
 "The synchronization interval cannot be set to less than one minute.  It was "
 "automatically changed to 60 seconds."
-msgstr "The synchronization interval cannot be set to less than one minute.  It was automatically changed to 60 seconds."
+msgstr "El intervalo de sincronización no puede ser inferior a un minuto. Se ha cambiado automáticamente a 60 segundos."
 #: src/LinuxClient/library/RemoveAccountDialog.cs:61 
 msgid "Remove this iFolder account?"
 msgstr "¿Desea eliminar esta cuenta iFolder?"
@@ -1199,10 +1199,10 @@ msgstr "Si elimina carpetas iFolder del servidor, se borrarán los archivos alma
 #: src/LinuxClient/library/Util.cs:167 
 #, csharp-format
 msgid "Error displaying help file \"{0}\""
-msgstr "Error displaying help file \"{0}\""
+msgstr "Error al mostrar el archivo de ayuda \"{0}\""
 #: src/LinuxClient/library/Util.cs:168 
 msgid "iFolder could not open the default web browser to show the help file."
-msgstr "iFolder could not open the default web browser to show the help file."
+msgstr "iFolder no ha podido abrir el navegador Web por defecto para mostrar el archivo de ayuda."
 #: src/LinuxClient/library/Util.cs:180 
 msgid "iFolder 3 Team"
 msgstr "Equipo de iFolder 3"
