--- a/ifolder/src/iFolderShell/UserProperties.sk.resx
+++ b/ifolder/src/iFolderShell/UserProperties.sk.resx
@@ -615,7 +615,7 @@
 	</data>
   
 	<data name="owner.Text">
-		<value>Zmeniť tohto používateľa na vlastníka priečinku iFolder</value>
+		<value>Zmeniť tohto používateľa na vlastníka priečinka iFolder</value>
 	</data>
   
 	<data name="owner.TextAlign" type="System.Drawing.ContentAlignment, System.Drawing, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
